Update provisioning to use 'build' web root

--- a/provisioning/etc/apache2/sites-available/drupal.conf
+++ b/provisioning/etc/apache2/sites-available/drupal.conf
@@ -1,13 +1,13 @@
 <VirtualHost *:80>
   ServerAdmin webmaster@localhost
-  DocumentRoot /vagrant/web
+  DocumentRoot /vagrant/build
 
   <Directory />
     Options FollowSymLinks
     AllowOverride None
   </Directory>
 
-  <Directory /vagrant/web>
+  <Directory /vagrant/build>
     Options FollowSymLinks MultiViews
     AllowOverride All
     Require all granted
